tzcode: Fix early tz change detection

Assume tzdata is not fresh if last_checked is zero, as comparing the
current time to last_checked less than __tz_change_interval after boot
may produce a false negative.

While here, invert the return value from tzdata_is_fresh() to better
match its new name (it was previously called recheck_tzdata(), so zero
for fresh and non-zero for stale made sense, but it doesn't now).

PR:		269207
MFC after:	3 days
Reviewed by:	imp
Differential Revision:	https://reviews.freebsd.org/D53502

(cherry picked from commit a38c2f99f81c2fc35c8ca209931c1c46e3e81023)